# notify-service

./: .gitignore  Makefile  README.md  env.example  gunicorn.conf.py  pyproject.toml
app/: main.py
app/api/: __init__.py  healthcheck_handlers.py  notify_handlers.py
app/clients/: __init__.py  bot_client.py  smtp_client.py
app/core/: depends.py  exceptions.py  settings.py
app/logs/: __init__.py  logging_setup.py  middleware_logging_setup.py
app/messages/: __init__.py  email.py  telegram.py
app/schemas/: __init__.py  form_schemas.py
app/services/: __init__.py  healthcheck_service.py  notify_service.py
