[project]
name = "notify-service"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "aiosmtplib>=5.0.0",
    "fastapi>=0.128.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "UP"]